--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     </header>
 
     <saction class="parallax">
-        <img src="/img/hill1.png" id="hill1">
-        <img src="/img/hill2.png" id="hill3">
-        <img src="/img/hill3.png" id="hill3">
-        <img src="/img/hill4.png" id="hill4">
-        <img src="/img/hill5.png" id="hill5">
-        <img src="/img/tree.png" id="tree">
+        <img src="img/hill1.png" id="hill1">
+        <img src="img/hill2.png" id="hill3">
+        <img src="img/hill3.png" id="hill3">
+        <img src="img/hill4.png" id="hill4">
+        <img src="img/hill5.png" id="hill5">
+        <img src="img/tree.png" id="tree">
         <h2 id="text">Welcome To My Website</h2>
-        <img src="/img/leaf.png" id="leaf">
-        <img src="/img/plant.png" id="plant">
+        <img src="img/leaf.png" id="leaf">
+        <img src="img/plant.png" id="plant">
     </saction>
 
     <section class="sec">
